<?xml version="1.0"?>
<package>
  <name>gcs_agent</name>
  <version>0.1.1</version>
  <description>ROS agent for QGroundControl</description>

  <maintainer email="smirnoviv@rambler.ru">Igor Smirnov</maintainer>
  <license>BSD</license>

  <author email="smirnoviv@rambler.ru">Igor Smirnov</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>svo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_fusion_comm</build_depend>
  <build_depend>mavlink</build_depend>
  <build_depend>libmavconn</build_depend>
  <run_depend>catkin</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>svo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_fusion_comm</run_depend>
</package>
