<?xml version="1.0"?>
<package format="2">
  <name>gcs_agent</name>
  <version>0.1.1</version>
  <description>ROS agent for QGroundControl</description>

  <maintainer email="smirnoviv@rambler.ru">Igor Smirnov</maintainer>
  <license>BSD</license>

  <author email="smirnoviv@rambler.ru">Igor Smirnov</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>mavros_msgs</depend>
  <depend>svo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <depend>sensor_fusion_comm</depend>
  <build_depend>mavlink</build_depend>
  <build_depend>libmavconn</build_depend>

  <depend>diagnostic_updater</depend>
</package>
